welcome.lessons.welcome.array.indexof.value.IndexOfValue.scala.error
indexOfValue: error: not found: value indexOfValue
   t.setResult( indexOfValue( t.getParameter(0).asInstanceOf[Array[Int]], t.getParameter(1).asInstanceOf[Int]) )
                ^indexOfValue:5: error: not found: value lookingFor
		if (lookingFor == nums(i)) {rep = i}
                    ^