welcome.lessons.welcome.array.indexof.value.IndexOfValue.scala.code
def indexOfMaxValue(nums:Array[Int] ,value:Int): Int = {
	var l = nums.length -1
	var rep = -1
	for (i<- 0 to l ) { 
		if (lookingFor == nums(i)) {rep = i}
		}
	return rep
}
